--- a/public/fixed.css
+++ b/public/fixed.css
@@ -25,12 +25,14 @@ body {
     font-size: 25px;
     background-color: grey;
     margin-top: 75px;
-
+    z-index: -1;
 }
 
 h3 {
     font-size: 20px;
 }
+
+
 
 .navitem a {
     text-decoration: none;
