--- a/public/fixed.css
+++ b/public/fixed.css
@@ -31,7 +31,6 @@ body {
 }
 
 .margin-container {
-    z-index: 0;
     margin: 5px;
 
 }
@@ -45,17 +44,15 @@ body {
     margin-left: 2px;
     margin-right: 2px;
     border: solid 1px;
-    width: 165px;
-    float: left;
-    z-index: 0;
+    width: 164px;
 }
 
-.book-detail-content h1 {
-    font-size: 10px;
+.position-content h5 {
+    font-size: 20px;
 }
 
-.book-detail-content img {
-    width: auto;
+.book-detail-image {
+    width: 100%;
     height: auto;
 }
 
@@ -73,8 +70,8 @@ body {
 }
 
 .book-content img {
-    height: 100px;
-    width: 165px;
+    height: 250px;
+    width: 150px;
 }
 
 .sub-header {
@@ -89,7 +86,10 @@ h3 {
     font-size: 20px;
 }
 
-
+.book-image {
+    width: 20px;
+    height: 100px;
+}
 
 .navitem a {
     text-decoration: none;
@@ -116,4 +116,21 @@ h3 {
     position: absolute;
     left: 50%;
     transform: translatex(-50%);
+}
+
+.p-bottom {
+    margin-bottom: 50px;
+}
+
+.erase-top {
+    margin-top: 0px;
+}
+
+.back-white {
+    background-color: white;
+    width: 100%;
+}
+
+.m-top {
+    height: 100px;
 }
